<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollViewAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayoutAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/about_acknowledgement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/about"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Button
                android:id="@+id/btn_licences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/openSourceLicences" />

            <TextView
                android:id="@+id/about_copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:gravity="center_vertical"
                android:text="@string/aboutCopyright"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>