<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_alert_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alert_Fav"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:nextFocusDown="@+id/edit_alert_mac"
            android:singleLine="true">

        </EditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_alert_mac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mac"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:nextFocusDown="@+id/edit_alert_broad"
            android:singleLine="true" />
        <!--android:layout_marginTop="5dp"-->
        <!--android:ems="12"-->
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_alert_broad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/broadcast"
            android:imeOptions="actionDone"
            android:inputType="textNoSuggestions"
            android:singleLine="true" />
        <!--android:layout_marginTop="5dp"-->
        <!--android:ems="12"-->
    </android.support.design.widget.TextInputLayout>

</LinearLayout>